modal button fix on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -427,6 +427,11 @@ hr{
 	position: relative;
 	overflow: hidden;
 }
+@media only screen and (max-width: 600px) {
+    .box{
+        width: 100%;
+    }
+}
 
 .box:hover {
 	-webkit-transform: perspective(500px) rotateY(15deg);
